--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build-prod": "webpack --node-env=production",
     "clear": "rd /s /q dist",
     "lint": "eslint . --ext .ts",
+    "test": "npx jest",
     "deploy": "npm run build-prod && npx gh-pages -d dist -e online-store"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
+    "@types/jest": "^29.2.5",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "babel-eslint": "^10.1.0",
@@ -32,6 +34,8 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^8.1.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
@@ -39,6 +43,7 @@
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.4",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.74.0",
